Fix truncation of long text in column headers

--- a/srcjs/reactable.css
+++ b/srcjs/reactable.css
@@ -32,6 +32,11 @@
   text-overflow: ellipsis;
 }
 
+.rt-th-content {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 /* Selectable cells */
 .rt-td-select {
   display: flex;
